--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 	<noscript>
 		You need to enable JavaScript to run this app.
 	</noscript>
-	<div id="root"></div>
+
+	<h1>Demos will be here soon</h1>
 	<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
