--- a/demo/pizza-menu/index.html
+++ b/demo/pizza-menu/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Small and simple project which shows a list of different pizzas"
     />
-    <link rel="apple-touch-icon" href="./logo192.png" />
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Fast React Pizza Co.</title>
-    <script defer="defer" src="./static/js/main.js"></script>
-    <link href="./static/css/main.css" rel="stylesheet" />
+    <script defer="defer" src="%PUBLIC_URL%/static/js/main.js"></script>
+    <link href="%PUBLIC_URL%/static/css/main.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
