--- a/demo/travel-list/index.html
+++ b/demo/travel-list/index.html
@@ -20,7 +20,7 @@
       rel="manifest"
       href="/kzaviryukha.github.io/demo/travel-list/manifest.json"
     />
-    <title>React App</title>
+    <title>Travel List</title>
     <script
       defer="defer"
       src="/kzaviryukha.github.io/demo/travel-list/js/main.js"
