--- a/demo/travel-list/index.html
+++ b/demo/travel-list/index.html
@@ -2,33 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="/kzaviryukha.github.io/demo/travel-list/favicon.ico"
-    />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link
-      rel="apple-touch-icon"
-      href="/kzaviryukha.github.io/demo/travel-list/logo192.png"
-    />
-    <link
-      rel="manifest"
-      href="/kzaviryukha.github.io/demo/travel-list/manifest.json"
-    />
-    <title>Travel List</title>
-    <script
-      defer="defer"
-      src="/kzaviryukha.github.io/demo/travel-list/js/main.js"
-    ></script>
-    <link
-      href="/kzaviryukha.github.io/demo/travel-list/css/main.css"
-      rel="stylesheet"
-    />
+    <title>Demos</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
