--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -20,7 +20,7 @@
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
 
-    <h1>Demos will be here soon</h1>
+    <h1>Smth useful will be here soon</h1>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
