--- a/demo/natours/index.html
+++ b/demo/natours/index.html
@@ -130,7 +130,7 @@
                 alt="Photo 3" />
             </div>
           </div>
-        </div>/kzaviryukha.github.io/demo/natours/
+        </div>
       </section>
 
       <section class="section-features">
