Update usePopcorn project

--- a/demo/use-popcorn/index.html
+++ b/demo/use-popcorn/index.html
@@ -5,8 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>usePopcorn</title>
-    <script type="module" crossorigin src="/assets/index.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index.css" />
+    <script
+      type="module"
+      crossorigin
+      src="/kzaviryukha.github.io/demo/natours/use-popcorn/assets/index.js"></script>
+    <link
+      rel="stylesheet"
+      crossorigin
+      href="/kzaviryukha.github.io/demo/natours/use-popcorn/assets/index.css" />
   </head>
   <body>
     <div id="root"></div>
